@@ -1,17 +1,23 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Icmake V 9.02.03</title>
+<title>Icmake V 9.02.04</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body>
 <hr/>
-<h1 id="title">Icmake V 9.02.03</h1>
+<h1 id="title">Icmake V 9.02.04</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1992-2017</h2>
@@ -33,6 +39,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.04">9.02.04</a>
+Dec 28, 2017;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.03">9.02.03</a>
 Nov 02, 2017;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.02">9.02.02</a>
@@ -40,9 +48,7 @@ Nov 01, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.00">9.02.00</a>
 Sep 29, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.01.00">9.01.00</a>
-Sep 03, 2016;
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.00.00">9.00.00</a>
-Jul 23, 2016.
+Sep 03, 2016.
         </ul>
     
 <p>
