@@ -4,13 +4,19 @@
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmake(1)</h1>
-<h2 id="author">A program maintenance utility<br/>(icmake.9.02.03.tar.gz)</h2>
+<h2 id="author">A program maintenance utility<br/>(icmake.9.02.04.tar.gz)</h2>
 <h2 id="date">1992-2017</h2>
 
 
@@ -462,7 +468,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
         values:
     <table>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
         
 <tr >
@@ -470,7 +476,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
  
 </tr>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
         
 <tr >
@@ -496,7 +502,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
  
 </tr>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
         
 <tr >
@@ -510,7 +516,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
  
 </tr>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
         
 <tr >
@@ -524,7 +530,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
  
 </tr>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
         
 <tr >
@@ -562,7 +568,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
  
 </tr>
 
-        <td colspan=3><hr/></td>
+        <tr><td colspan=3><hr/></td></tr>
 
     
 </table>
@@ -570,7 +576,7 @@ The following constants are predefined by <strong >icmake</strong>. All are cons
 The following constants are architecture dependent:
     <table>
 
-        <td colspan=2><hr/></td>
+        <tr><td colspan=2><hr/></td></tr>
 
         
 <tr >
@@ -578,7 +584,7 @@ The following constants are architecture dependent:
  
 </tr>
 
-        <td colspan=2><hr/></td>
+        <tr><td colspan=2><hr/></td></tr>
 
         
 <tr >
@@ -622,7 +628,7 @@ The following constants are architecture dependent:
  
 </tr>
 
-        <td colspan=2><hr/></td>
+        <tr><td colspan=2><hr/></td></tr>
 
     
 </table>
@@ -1103,14 +1109,14 @@ If no path is found, an empty strring is returned.
         may be specified as its first argument:
     <table>
 
-        <td colspan=0><hr/></td>
+        <tr><td colspan=0><hr/></td></tr>
 
         
 <tr >
 <td > symbol</td><td > meaning</td> 
 </tr>
 
-        <td colspan=0><hr/></td>
+        <tr><td colspan=0><hr/></td></tr>
 
         
 <tr >
@@ -1132,7 +1138,7 @@ If no path is found, an empty strring is returned.
 <td > O_SUBDIR</td><td > obtain all subdirectories</td> 
 </tr>
 
-        <td colspan=0><hr/></td>
+        <tr><td colspan=0><hr/></td></tr>
 
     
 </table>
