@@ -4,13 +4,19 @@
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmconf(7)</h1>
-<h2 id="author">configuration file for <strong >icmbuild</strong>(1)<br/>(icmake.9.02.03.tar.gz)</h2>
+<h2 id="author">configuration file for <strong >icmbuild</strong>(1)<br/>(icmake.9.02.04.tar.gz)</h2>
 <h2 id="date">1992-2017</h2>
 
 
